parser/samples/errors/invalid_parse.txt
Error:   × syntax error
   ╭─[samples/errors/invalid.ks:3:1]
 2 │
 3 │ 123
   · ┬
   · ╰── here
   ╰────
